--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>DevOps POC</title>
 </head>
 <body>
-    <h1>hi to DevOps CI/CD POC!</h1>
-    <p>Deployed using Jenkins + Docker + Terraform + AWS EC2</p>
+    <h1>Gaandu Gagan</h1>
+    <p>kisibeda</p>
 </body>
 </html>
