--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>DevOps POC</title>
-</head>
 <body>
-    <h1>Gaandu Gagan</h1>
-    <p>kisibeda</p>
+
+<h2>HTML Image</h2>
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.thegreatprojects.com%2Fblog%2Fthat-s-bananas-a-list-of-our-marvelous-monkey-facts&psig=AOvVaw06SOZZXnmO1bjonwuH2I1M&ust=1761227178966000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCKCj8NX4t5ADFQAAAAAdAAAAABAE" alt="Manga" width="460" height="345">
+
 </body>
 </html>
