--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h2>HTML Image</h2>
-<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.thegreatprojects.com%2Fblog%2Fthat-s-bananas-a-list-of-our-marvelous-monkey-facts&psig=AOvVaw06SOZZXnmO1bjonwuH2I1M&ust=1761227178966000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCKCj8NX4t5ADFQAAAAAdAAAAABAE" alt="Manga" width="460" height="345">
+<h2>Naanu Harshitha</h2>
+<img src="https://as1.ftcdn.net/v2/jpg/02/01/28/94/1000_F_201289423_xCL0CpzORRndal2IUMBAS2MQxfyX2Pzp.jpg" alt="Naanu Harshitha" width="460" height="345">
 
 </body>
 </html>
