updated html file

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>POC-1</title>
+</head>
 <body>
 
-<h2>Naanu Harshitha</h2>
-<img src="https://as1.ftcdn.net/v2/jpg/02/01/28/94/1000_F_201289423_xCL0CpzORRndal2IUMBAS2MQxfyX2Pzp.jpg" alt="Naanu Harshitha" width="460" height="345">
+  <h1>Simple static webhosting from AWS s3</h1>
+  <p>Flow Local - git - Jenkins - AWS s3 </p>
 
 </body>
 </html>
