--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <h1>Simple static webhosting from AWS s3</h1>
+  <h1>Github Public static webhosting AWS s3 a</h1>
   <p>Flow Local - git - Jenkins - AWS s3 </p>
 
 </body>
